# tracking_solution

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  apt.txt  build.sh  defaults.ini  prompt.md  python.txt  run_test.sh  synthetic_generator_docs.md  tracker_explanation.md
include/: Tracker.hpp  hungarian.hpp
src/: Tracker.cpp  main.cpp
tests/: compare_tracks.py  expected.json  generate_input.py  generate_input_noise_lifetimes_dropout_time_jitter.py  generate_input_proper ids.py  input.json  json2png.py  output.json  run_tests.sh  run_tests_docker.sh
